Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.4.7
Description
The test added in MDEV-17228 crashes when using the new file format:
./mtr --mysqld=--innodb-checksum-algorithm=full_crc32 encryption.innodb_encrypt_temporary_tables
|
|
mariadb-10.4.7 |
2019-08-13 18:05:18 9 [ERROR] [FATAL] InnoDB: Unable to read page [page id: space=4294967294, page number=3] into the buffer pool after 100. The most probable cause of this error may be that the table has been corrupted. See https://mariadb.com/kb/en/library/innodb-recovery-modes/
|
Attachments
Issue Links
- is caused by
-
MDEV-17228 Encrypted temporary tables are not encrypted
-
- Closed
-